# Formal.languages

formal.languages/: CMakeLists.txt  README.md
formal.languages/include/: Earley.hpp  Grammar.hpp  Situation.hpp
formal.languages/src/: Earley.cpp  Grammar.cpp  Situation.cpp  main.cpp
formal.languages/tests/: tests.cpp
